--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>Welcome to My Website et bien plus encore</h1>  
         <!-- ici un commentaire -->
     </main>
 	<script src="index.js"></script>
